<resources>
    <!--to support multiple languages-->

    <string name="app_name">Sugarcane Disease Detection</string>
    <string name="sugar">SUGAR</string>
    <string name="cane">CANE</string>
    <string name="disease_detection">Disease Detection</string>
    <string name="select_img">Click To Select An Image</string>
    <string name="learn_more_about_it">Learn More About It</string>
    <string name="changelng">Change Language</string>
    <string name="redStripCausesDesc">Caused by the fungus Colletotrichum falcatum (Glomerella tucumanensis). Hot dry weather for completeion of disease cycle and wet conditions for pathogens to develop. Temperature range: 29.4 to 31 degree Celcius.</string>
    <string name="redStripDesc">The red rot disease, which is also known as the cancer of sugarcane crops, can wipe out entire standing crops. The infection can reduce the sugarcane\'s weight by 29 per cent and result in poor quality of cane. As much as 25-75% sucrose is reduced in diseased cane as compared to the healthy cane. It is characterized by interrupted red and white patches within the cane along with a sour alcoholic odour when the cane is split open.</string>
    <string name="causes">Causes</string>
    <string name="red_strip">Red Strip</string>
    <string name="symptoms">Symptoms</string>
    <string name="redStripSymptomsDesc">The affected canes exhibit leaf colour change, from green to orange and then to yellow in the third or fourth leaf. Then the leaves start drying from bottom to top. If the fungal spores enter the leaf sheath through the leaf midrib, then reddish spots can be seen on the back side of the leaf midrib also. The external symptoms appear only after16 - 21 days after infection and drying of the entire cane takes another 10 days When the affected cane is split open, the inner region is reddish in colour with intermittent white tinges across the cane length. Sometimes, the pith inside the cane is filled with blackish-brown liquid and exhibited an alcohol odour</string>
    <string name="treatment">Treatment</string>
    <string name="redStripTreatmentDesc">• Cultural method: The best way to control red rot is to select setts for planting healthy plants in a disease-free area. The red rot-affected field must be rotated with rice for one season and other crops for two seasons. Growing of recommended resistant and moderately resistant varieties viz., Co 86032, Co 86249, CoSi 95071, CoG 93076, CoC 22, CoSi 6 and CoG 5.
        • Physical method: Removal of the affected clumps at an early stage and soil drenching with Carbendazim 50 WP (1 gm in 1 litre of water) The cut ends and entire setts should be dipped in a fungicide solution, such as a one per cent Bordeaux mixture. If the disease is noticed in the field, the leaves and canes should be collected and destroyed by burning.
        • Chemical method: Adopt sett treatment with Carbendazim before planting (Carbendazim 50 WP (0.5 gm in 1 litre of water) or Carbendazim 25 DS (1gm in 1 litre of water) along with 2.5 kg of Urea in 250 litres of water Use fungi-toxic chemicals like Bavistan, Benomyl, Topsin and Aretan at 0.1 per cent for 18 min. at 52ºC for dipping setts which gave almost complete elimination of rot infection. The progress of red rot can be stopped or slowed with a treatment of aluminium alkoxide solution, which increases the pH value and becomes (in the presence of water) a buffering inorganic aluminium salt in the leather.</string>
    <string name="leaf_scald">Leaf Scald</string>
    <string name="leafScaldDesc">Leaf scald is a disease that can cause sugarcane death. Therefore, it can have a great effect on sugarcane yields and has the potential to seriously limit the cultivation of susceptible varieties. The disease is insidious in that it may have a latent (asymptomatic) period that lasts for months and sometimes years.</string>
    <string name="leafScaldCausesDesc">The disease is caused by the bacterium Xanthomonas albilineans (Ashby) Dowson, which infects the sugarcane plant\'s xylem (water transport) vessels. The bacterium is rod-shaped.</string>
    <string name="leafScaldSymptomsDesc"><![CDATA[Latent phase • Leaf scald can remain latent in some varieties for long periods (>12 months) while showing no symptoms. Stress can trigger the infected plant to pass from the latent phase into the chronic or acute phase. Chronic phase • Leaf scald causes a range of symptoms including chlorotic (white) stripes and patches of chlorotic tissue on leaves, side shooting beginning at the base of stalks and burning of the leaf tips. When stalks are sliced open, the vascular bundles are red in the nodes. Within the white stripes on leaves is a well-defined white Pencil line that runs along the vein; this pencil line is specific to leaf scald. Acute phase • In some susceptible varieties, leaf scald will cause sudden death of whole stools. • Usually, the dead stalks will show some chronic stage symptoms, particularly on side shoots or suckers. Leaf scald symptoms often appear when the cane is placed under stress such as in dry weather.]]></string>
    <string name="leafScaldTreatmentDesc">The best control for leafstalks is preventing the disease and replacing susceptible varieties with resistant varieties. Because leaf scald is a latent disease, growers should be alert for infection even in varieties thought to be resistant. Seed cane can be given a long hot-water treatment to kill the pathogen. In Australia, a 24-hour presoak in flowing water followed by a three-hour 50°C (122°F) treatment is used to clean infected planting material. The shorter two-hour 50°C (122°F) treatment used for ratoon stunting disease provides only partial control. Using disease-free seed cane derived from a tissue culture process also controls the disease. To prevent the mechanical spread of the pathogen, all cane-cutting knives, including those on mechanical harvesters, should be sterilized when coming from suspect fields. Disinfection of the knives can be accomplished by cleaning and immersing them for several minutes in a suitable antiseptic solution, such as Lysol, alcohol, or a diluted solution of bleach. If the pathogen is transmitted aerially, it also influences the length of time disease-free seed fields to remain disease-free. There are no known chemical or biological controls for this disease.</string>
    <string name="rust">Rust</string>
    <string name="rustDesc">The first symptoms of sugarcane rust are elongated, yellow-coloured leaf spots, roughly 1mm to 4mm in length. The leaf spots gradually become bigger and turn a reddish-brown colour. The uremia develops underneath the epidermis where the leaf spots are present.</string>
    <string name="rustCausesDesc">Brown rust of sugarcane is caused by a fungus, Puccinia melanocephala</string>
    <string name="rustSymptomsDesc">The earliest symptoms are small, elongated yellowish spots that are visible on both leaf surfaces. The spots increase in length, and turn brown to orange-brown or red-brown in colour, which coalesced and formed large, irregular necrotic areas, thus it shows the rusty appearance of the leaf. This eventually resulted in the premature death of the leaves</string>
    <string name="rustTreatmentDesc">• Cultural method The best means of control for sugarcane rust is to grow resistant varieties Use resistant varieties like Co 91010 (Dhanush), Co 87025 (Kalyani) Affected leaves should be removed and burned immediately Sugarcane grown in fields receiving recent applications of mill mud is typically very prone to rust • Chemical method Spray Tridemorph 1.0 litres or Mancozeb 2.0 kg/ha. Use dithane M 45 @ 2 g/lit for one spraying. Application of triazole or strobilurin or pyraclostrobin fungicide @ 3 g/ lit of water.</string>
    <string name="healthy">Healthy</string>
</resources>