<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_bg"
    tools:context=".RedStrip">

    <ImageView
        android:id="@+id/HomeIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Language"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/redStripImg"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_strip_sugarcane" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redStripImg"
        app:layout_constraintVertical_bias="0.686">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/redstrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/almarai_bold"
                android:text="@string/red_strip"
                android:textAlignment="center"
                android:textColor="@color/brown_txt"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/redStripDescId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/redStripDesc"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/almarai_bold"
                android:text="@string/causes"
                android:textAlignment="center"
                android:textColor="@color/brown_txt"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/redStripCausesDescId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/redStripCausesDesc"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/almarai_bold"
                android:text="@string/symptoms"
                android:textAlignment="center"
                android:textColor="@color/brown_txt"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/redStripSymptomsDescId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/redStripSymptomsDesc"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/redStripTreatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_bold"
                android:padding="15dp"
                android:text="@string/treatment"
                android:textAlignment="center"
                android:textColor="@color/brown_txt"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/redStripTreatmentDescId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/redStripTreatmentDesc"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>