<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".splashScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="111dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_regular"
                android:letterSpacing="0.15"
                android:text="@string/sugar"
                android:textAlignment="center"
                android:textColor="@color/brown_txt"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_regular"
                android:letterSpacing="0.15"
                android:text="@string/cane"
                android:textAlignment="center"
                android:textColor="@color/brown_txt"
                android:textSize="37sp"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="111dp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/oval_shadow_effect"
        android:layout_marginTop="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/disease_detection"
        android:fontFamily="@font/almarai_regular"
        android:textSize="30sp"
        android:textColor="@color/brown_txt"
        android:layout_marginTop="5dp"
        android:letterSpacing="0.02" />

</LinearLayout>